# rust-tv-table-function

./: .clang-format  .clang-tidy  .gitignore  CONTRIBUTING.md  Cargo.toml  README  build.rs  justfile  main.zng  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  lint.yml  release.yml  sync-to-github.yml  sync-to-gitlab.yml
ci/scripts/: fix_generated.sh  pack-release.sh
cpp/: CMakeLists.txt  CMakePresets.json  justfile  project.json  vcpkg-configuration.json  vcpkg.json
cpp/cmake/: process_resources.cmake
cpp/tests/: call_rust_test.cpp  test_driver.cpp
cpp/vcpkg_registry/versions/: baseline.json
cpp/zngur/: extra_generated.h
lib/predict/: Cargo.toml
lib/predict/src/: dist.rs  lib.rs  optimize.rs  statespace.rs  utils.rs
lib/predict/src/models/: mod.rs  multivariate.rs  univariate.rs
rust-tvtf/: Cargo.toml  build.rs  main.zng
rust-tvtf-api/: Cargo.toml
rust-tvtf-api/src/: arg.rs  arrow_utils.rs  lib.rs
rust-tvtf-example/: Cargo.toml  main.zng
rust-tvtf-example/.cargo/: config.toml
rust-tvtf-example/src/: lib.rs
rust-tvtf-example/src/funcs/: count_column.rs  error_producer.rs  mod.rs
rust-tvtf/benches/: trans_bench.rs
rust-tvtf/fixtures/: access_log.csv  group_pairs.jsonl  trans_three_null-result.csv  trans_three_null.jsonl
rust-tvtf/src/: lib.rs  zngur_generated.rs
rust-tvtf/src/funcs/: addtotals.rs  anomalydetection.rs  filldown.rs  flatten.rs  mod.rs  outputcsv.rs  predict.rs  trans.rs
src/: arg.rs  arrow_utils.rs  lib.rs
src/funcs/: addtotals.rs  mod.rs  outputcsv.rs
