[workspace]
resolver = "3"
members = ["rust-tvtf-api", "rust-tvtf"]

[workspace.dependencies]
arrow = { version = "=54.2.1", features = ["chrono-tz", "ffi"] }
arrow-csv = "=54.2.1"
arrow-schema = { version = "=54.2.1" }
anyhow = "1.0.98"
derive_builder =  "0.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
parking_lot = "0.12.4"
tempfile = "3.20.0"

[workspace.dependencies.zngur]
git = "https://github.com/yanhuangdata/zngur.git"
# feat: add `zngur_dyn_api`, support dynamic libraries at runtime
rev = "0e5da6cd903fcd2007612438477d24f2eaa3deed"

[profile.release]
debug = "full"
lto = "thin"
