[workspace]
resolver = "3"
members = ["rust-tvtf-api", "rust-tvtf", "rust-tvtf-example"]

[workspace.dependencies]
arrow = { version = "=54.2.1", features = ["chrono-tz", "ffi"] }
arrow-csv = "=54.2.1"
arrow-schema = { version = "=54.2.1" }
anyhow = "1.0.98"
derive_builder =  "0.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
parking_lot = "0.12.4"
tempfile = "3.20.0"

[workspace.dependencies.zngur]
git = "https://github.com/yanhuangdata/zngur.git"
# feat: error handling for dlsym
rev = "841523fe905330c0cd9259e3d348e76b8ae080a0"

[profile.release]
debug = "line-tables-only"
lto = "thin"
