[package]
name = "rust-tvtf-api"
version = "0.2.33"
edition = "2024"
description = "Yanhuang Data Rust Table Function API"
license = "Apache-2.0"
homepage = "https://www.yanhuangdata.com"

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
anyhow = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
