[package]
name = "rust-tvtf-example"
version = "0.2.15"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
anyhow = { workspace = true }
rust-tvtf-api = { path = "../rust-tvtf-api" }

[build-dependencies]
anyhow = { workspace = true }
zngur = { workspace = true }
