[package]
name = "rust-tvtf"
version = "0.2.11"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true }
arrow-csv = { workspace = true }
arrow-schema = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rust-tvtf-api = { path = "../rust-tvtf-api" }
chrono = "0.4.39"
regex = "1.11.1"
smallvec = "1.15.1"

[build-dependencies]
anyhow = { workspace = true }
zngur = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
