[package]
name = "rust-tvtf"
version = "0.2.23"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-tvtf-api = { path = "../rust-tvtf-api" }

arrow = { workspace = true }
arrow-csv = { workspace = true }
arrow-schema = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
smallvec = { workspace = true }
hashbrown = { workspace = true }
csv = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
zngur = { workspace = true }

[dev-dependencies]
csv.workspace = true
tempfile = { workspace = true }
