[package]
name = "rust-tvtf"
version = "0.2.31"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rust-tvtf-api = { path = "../rust-tvtf-api" }

arrow = { workspace = true }
arrow-csv = { workspace = true }
arrow-schema = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
smallvec = { workspace = true }
hashbrown = { workspace = true }
csv = { workspace = true }
ahash = "0.8"
atoi_simd = "0.17.0"

[build-dependencies]
anyhow = { workspace = true }
zngur = { workspace = true }

[dev-dependencies]
csv.workspace = true
tempfile = { workspace = true }
criterion = "0.7"

[[bench]]
name = "trans_bench"
harness = false
